<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    android:background="@color/black"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/textWhite"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/explore_latest_hits_only_on_su_shi"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:id="@+id/email_editText"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone number (+91xxxxxxxxxx)"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:inputType="phone"
            android:background="@drawable/rounded_corner"
            android:id="@+id/phone_editText"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:id="@+id/password_editText"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:id="@+id/confirm_password_editText"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/create_account"
            android:id="@+id/create_account_btn"/>

        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="60dp"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:indeterminateTint="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/textWhite"
            android:gravity="center"
            android:id="@+id/goto_login_btn"/>
    </LinearLayout>
</LinearLayout>
